2003-05-13  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Added sound-juicer.

2003-05-13  Abel Cheung  <maddog@linux.org.hk>

	* translation-status.xml: bonobo-activation removed from GNOME 2.4.
	  (it is merged into libbonobo HEAD)

2003-05-09  Abel Cheung  <maddog@linux.org.hk>

	* translation-status.xml: Move gnome-chess to GNOME 2.4, it has
	  started porting to gtk2. Eog is not core software in GNOME 1.4.
	  (is it possible to fix the duplicated group name IDs?)

2003-05-07  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Added gnome-themes-extras.

2003-05-06  Carlos Perelló Marín <carlos@gnome.org>

	* translation-status.xml: Fixed the gedit's .pot name for GNOME 2.2

2003-05-03  Carlos Perelló Marín <carlos@gnome.org>

	* translation-status.xml: Fixed the gdl group for GNOME 1.4 (perhaps
	this will fix the segfault that break the status pages)

2003-05-03  Ole Laursen  <olau@hardworking.dk>

	* translation-status.xml: Removed pong since George says it is dead.

2003-05-03  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Fixed 2.2 branch for gnome-themes.

2003-05-03  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Removed 2.2 fifth-toe, bindings,
	developer-app, office, and extras modules. They were mostly
	identical to those we have in the respective 2.4 sections anyway,
	and we need to reduce the amount of modules to build for the
	status pages.

2003-05-02  Abel Cheung  <maddog@linux.org.hk>

	* translation-status.xml: Fix pot name for gnome-spell.

2003-05-01  Ole Laursen  <olau@hardworking.dk>

	* translation-status.xml: Moved gdl and gnome-build to developer-app.

2003-04-30  Abel Cheung  <maddog@linux.org.hk>

	* translation-status.xml: Fixed 2.4 branch for libgtop.

2003-04-29  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Tried to add 2.4 modules.

2003-04-25  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Fixed branch for libgnome,