@@ -2590,17 +2590,6 @@
       </component>
     </version>
   </module>
-  <module name="themus">
-    <version release="gnome-2.4">
-      <component name="themus" dir="themus" group="extras">
-       <podir dir="po"/>
-       <potname name="themus.pot"/>
-       <branch name="HEAD"/>
-       <regenerate/>
-       <download/>
-      </component>
-    </version>
-  </module>
   <module name="think">
     <version release="gnome-1.4">
       <component name="think" dir="think" group="extras">
