@@ -1,5 +1,10 @@
 2003-05-13  Christian Rose  <menthos@menthos.com>
 
+	* translation-status.xml: Removed themus. It's now part
+	of gnome-control-center.
+
+2003-05-13  Christian Rose  <menthos@menthos.com>
+
 	* translation-status.xml: Added sound-juicer.
 
 2003-05-13  Abel Cheung  <maddog@linux.org.hk>
